# gaussian-blur

./: .gitignore  CMakeLists.txt  README.md
src/host/: OpenCL.cpp  OpenCL.h  main.cpp
src/kernel/: gaussian_blur.cl  vector_add.cl
